--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,51 +1,67 @@
 {% extends 'base.html' %}
 {% block main %}
 {% if error_msg %}
-    <p>{{ error_msg }}</p>
+<p>{{ error_msg }}</p>
 {% endif %}
 {% for post in post_list %}
-    <!--显示blog链接-->
-    <article class="post post-1">
-        <h1 class="entry-title">
-            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-        </h1>
-    </article>
+<!--显示blog链接-->
+<article class="post post-1">
+    <h1 class="entry-title">
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+    </h1>
+</article>
 
-    <!--分类（category）、文章发布时间、文章作者、评论数-->
-    <div class="entry-meta">
-        <span class="post-category"><a href="#">Web Design</a></span>
+<!--分类（category）、文章发布时间、文章作者、评论数-->
+<div class="entry-meta">
+    <span class="post-category"><a href="#">Web Design</a></span>
 
-        <span class="post-date"><a href="#"><time class="entry-date"
-                                                  datetime="2012-11-09T23:15:57+00:00">February 2, 2013</time></a></span>
+    <span class="post-date"><a href="#"><time class="entry-date"
+                                              datetime="2012-11-09T23:15:57+00:00">February 2, 2013</time></a></span>
 
-        <span class="post-author"><a href="#">Albert Einstein</a></span>
+    <span class="post-author"><a href="#">Albert Einstein</a></span>
 
-        <span class="comments-link"><a href="#">4 Comments</a></span>
-    </div>
+    <span class="comments-link"><a href="#">4 Comments</a></span>
+</div>
 
-    <!--摘要-->
-    <div class="entry-meta">
+<!--摘要-->
+<div class="entry-meta">
         <span class="post-category">
           <a href="#">{{ post.category.name }} </a>
         </span>
 
-        <span class="post-date">
+    <span class="post-date">
           <a href="#">
             <time class="entry-date" datetime="{{ post.created_time }}">{{ post.created_time }}         </time>
           </a>
         </span>
-        <span class="post-author"><a href="#">{{ post.author }} </a></span>
-        <span class="comments-link"><a href="#">4 Comments</a></span>
-    </div>
+    <span class="post-author"><a href="#">{{ post.author }} </a></span>
+    <span class="comments-link"><a href="#">4 Comments</a></span>
+</div>
 
-    <!--继续阅读-->
-    <div class="entry-content clearfix">
-        <p>...</p>
-        <div class="read-more cl-effect-14">
-            <a href="{{ post.get_absolute_url }}" class="more-link">继续阅读<span class="meta-nav">→</span></a>
-        </div>
+<!--继续阅读-->
+<div class="entry-content clearfix">
+    <p>...</p>
+    <div class="read-more cl-effect-14">
+        <a href="{{ post.get_absolute_url }}" class="more-link">继续阅读<span class="meta-nav">→</span></a>
     </div>
-    {% empty %}<!--bolg为空时显示未发布文章-->
-        <div class="no-post">暂时还没有发布的文章！</div>
-    {% endfor %}
+</div>
+{% empty %}<!--bolg为空时显示未发布文章-->
+<div class="no-post">暂时还没有发布的文章！</div>
+{% endfor %}
+<div class="pagination">
+    {% if post_list.has_previous %}
+    <!-- 如果当前页还有上一页，显示一个上一页的按钮 -->
+    <a href="?page={{ post_list.previous_page_number }}">上一页</a>
+    {% endif %}
+    <span class="current">
+    <!-- 显示当前页面信息 -->
+    第 {{ post_list.number }} 页 / 共 {{ post_list.paginator.num_pages }} 页
+    </span>
+    {% if post_list.has_next %}
+    <!-- 如果当前页还有上下页，显示一个下一页的按钮 -->
+    <a href="?page={{ post_list.next_page_number }}">下一页</a>
+    {% endif %}
+</div>
 {% endblock main %}
+
+
